<resources>
    <string name="app_name">MingLi</string>
    <string name="action_settings">Settings</string>
    <string name="ming">八字预测</string>
    <string name="yun">命例赏析</string>
    <string name="book">命运形成</string>
    <string name="record">记录</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="pre_ti_shi">请选择出生时间（上下滑动即可选择）</string>
    <string name="pai_ba_zi">排八字</string>
    <string name="nian_zhu">年柱</string>
    <string name="yue_zhu">月柱</string>
    <string name="ri_zhu">日柱</string>
    <string name="shi_zhu">时柱</string>
    <string name="ri_yuan">日元</string>
    <string name="si_zhu">四柱</string>
    <string name="shi_shen">十神</string>
    <string name="ba_zi">八\n字</string>
    <string name="cang_gan">藏干</string>
    <string name="ba_zi_jie_si">八字解释：</string>
    <string name="ba_zi_jie_si_content">命理有云：一命二运三风水四积德五读书，所谓算命就是根据人出生的年月日时对应的天干地支
        来测算命格的好坏，年月日时是由八个天干和地支组成的，所以算命也称为算八字。其中日元（也就是日柱的天干）代表的是自己。
        根据测算理论的不同，又分为用神派和格局派。用神派看八字时，讲究日主的阴阳平衡，既不能太过，也不能不及。而格局派通过月令（
        月柱的地支）和日主的关系将八字分成很多格局，基本格局大概是10个左右，格局派看八字时更加注重八字的格局是否成立，是否有对格局
        的破坏等等。软件只能起到一个快速推出八字和大运的作用，用户可以根据软件算出的八字，查找书籍标签下的对应的书籍来对比自己的八字
        </string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="da_yun">大运</string>
    <string name="first_da_yun">第一次交大运的准确时间: </string>
    <string name="da_yun_date">""</string>
    <string name="da_yun_nian">""</string>
    <string name="da_yun_gan_zhi">""</string>
    <string name="born_time">出生时间:</string>
    <string name="sex">性别：</string>
    <string name="di_tian_shui">滴天髓论命：</string>
    <string name="qiong_tong">穷通宝鉴论命：</string>
    <string name="san_ming">三命通会论命：</string>
    <string name="pai_ba_zi_help">排八字的帮助</string>
    <string name="ming_yun_xing_cheng_help">命运形成的帮助</string>
    <string name="pai_ba_zi_help_content">点击日历图标选择好出生日期，然后选择性别，最后点击八卦按钮即可开始排八字了</string>
    <string name="ming_yun_xing_cheng_help_content">点击百业经的封面上的任何一点，在弹出的对话框里选择一种打开方式即可</string>
    <string name="share_help">分享的操作帮助</string>
    <string name="shu_yue_jie_si">命理的基本概念</string>
    <string name="about_soft">关于软件</string>
    <string name="share_help_content">请先滑动到想分享的部分，软件会自动进行截图，然后点击分享按钮（在帮助按钮的左侧），
        然后在弹出的对话框里选择分享的途径即可</string>
    <string name="shu_yu_jie_si_content">命理有云：一命二运三风水四积德五读书，所谓算命就是根据人出生的年月日时对应的天干地支
        来测算命格的好坏，年月日时是由八个天干和地支组成的，所以算命也称为算八字。其中日元（也就是日柱的天干）代表的是自己。
        根据测算理论的不同，又分为用神派和格局派。用神派看八字时，讲究日主的阴阳平衡，既不能太过，也不能不及。而格局派通过月令（
        月柱的地支）和日主的关系将八字分成很多格局，基本格局大概是10个左右，格局派看八字时更加注重八字的格局是否成立，是否有对格局
        的破坏等等。</string>
    <string name="about_soft_content">本软件完全免费，主要是帮助命理爱好者快速推出八字</string>
</resources>
