<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/text_share_help"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/share_help"
        android:textSize="@dimen/base_font_size"
        android:clickable="true"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/text_shu_yu_jie_si"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/shu_yue_jie_si"
        android:textSize="@dimen/base_font_size"
        android:clickable="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/text_about_soft"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/about_soft"
        android:textSize="@dimen/base_font_size"
        android:clickable="true"/>

</LinearLayout>