<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        >
        <ImageButton
            android:id="@+id/img_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"/>
        <ImageButton
            android:id="@+id/img_btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/share"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ll_ming"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/top_bar_height"
            android:orientation="vertical"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/ming"
                android:textSize="@dimen/main_activity_base_size"

                android:clickable="false"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_yun"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/top_bar_height"
            android:orientation="vertical"

            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/yun"
                android:textSize="@dimen/main_activity_base_size"

                android:clickable="false"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_book"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/top_bar_height"
            android:orientation="vertical"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/book"
                android:layout_marginTop="12dp"
                android:textSize="@dimen/main_activity_base_size"

                android:clickable="false"/>
        </LinearLayout>

        <!--
        <LinearLayout
            android:id="@+id/ll_record"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/top_bar_height"
            android:orientation="vertical"
            android:background="@color/gray"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/record"
                android:textSize="30sp"

                android:clickable="false"/>
        </LinearLayout>
        -->
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
        </android.support.v4.view.ViewPager>
    </LinearLayout>
    

</LinearLayout>